--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type" : "module",
+  "type": "module",
   "author": "",
   "license": "ISC",
   "description": "",
@@ -14,7 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.1"
+    "moment-timezone": "^0.5.46",
+    "mongoose": "^8.7.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.15"
   }
 }
