--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -3,6 +3,6 @@
   "rules": {
     "react/no-unescaped-entities": "off",
     "@next/next/no-page-custom-font": "off",
-    "Linting and checking validity of types" : "off"
+    "@typescript-eslint/no-empty-object-type" : "off"
   }
 }
